--- a/AppOverview.json
+++ b/AppOverview.json
@@ -202,7 +202,7 @@
     "timeframe": null,
     "managementZone": null
    },
-   "markdown": "![User Journey Links1]()\n"
+   "markdown": "![Funnel Links1]()\n"
   },
   {
    "name": "Markdown",
