--- a/ApplicationForecastAnalysis.json
+++ b/ApplicationForecastAnalysis.json
@@ -214,7 +214,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Satisfied User Forecast",
       "query": "select (((anosu1*256 + anosu2*16 + anosu3*4 + anosu4*2 + anosu5)/279) + (anosu1 + ((((anosu1-anosu2) - (anosu2-anosu3))) - (((anosu2-anosu3) - (anosu3-anosu4))) + ((anosu1-anosu2) - (anosu2-anosu3)) + (anosu1-anosu2) + ((anosu2-anosu3) - (anosu3-anosu4)) + (anosu2-anosu3) + ((anosu3-anosu4) - (anosu4-anosu5)) + (anosu3-anosu4) + (anosu4-anosu5))/10)*2)/3*tfactor/100 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -232,7 +232,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Satisfied Users",
       "query": "select anosu1 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -250,7 +250,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Satisfied Users",
       "query": "select anosu2 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -268,7 +268,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Satisfied Users",
       "query": "select anosu3 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -286,7 +286,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Satisfied Users",
       "query": "select anosu4 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -304,7 +304,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Satisfied Users",
       "query": "select anosu5 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -322,7 +322,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Tolerated Users Forecast",
       "query": "select (((anotu1*256 + anotu2*16 + anotu3*4 + anotu4*2 + anotu5)/279) + (anotu1 + ((((anotu1-anotu2) - (anotu2-anotu3))) - (((anotu2-anotu3) - (anotu3-anotu4))) + ((anotu1-anotu2) - (anotu2-anotu3)) + (anotu1-anotu2) + ((anotu2-anotu3) - (anotu3-anotu4)) + (anotu2-anotu3) + ((anotu3-anotu4) - (anotu4-anotu5)) + (anotu3-anotu4) + (anotu4-anotu5))/10)*2)/3*tfactor/100 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -340,7 +340,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Tolerated Users",
       "query": "select anotu1 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -358,7 +358,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Tolerated Users",
       "query": "select anotu2 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -376,7 +376,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Tolerated Users",
       "query": "select anotu3 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -394,7 +394,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Tolerated Users",
       "query": "select anotu4 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -412,7 +412,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Tolerated Users",
       "query": "select anotu5 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -430,7 +430,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Frustrated Users Forecast",
       "query": "select (((anofu1*256 + anofu2*16 + anofu3*4 + anofu4*2 + anofu5)/279) + (anofu1 + ((((anofu1-anofu2) - (anofu2-anofu3))) - (((anofu2-anofu3) - (anofu3-anofu4))) + ((anofu1-anofu2) - (anofu2-anofu3)) + (anofu1-anofu2) + ((anofu2-anofu3) - (anofu3-anofu4)) + (anofu2-anofu3) + ((anofu3-anofu4) - (anofu4-anofu5)) + (anofu3-anofu4) + (anofu4-anofu5))/10)*2)/3*tfactor/100 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -448,7 +448,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Frustrated Users",
       "query": "select anofu1 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -466,7 +466,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Frustrated Users",
       "query": "select anofu2 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -484,7 +484,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Frustrated Users",
       "query": "select anofu3 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -502,7 +502,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Frustrated Users",
       "query": "select anofu4 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -520,7 +520,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Frustrated Users",
       "query": "select anofu5 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -538,7 +538,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "User Action Duration Forecast",
       "query": "select (((appdur1*256 + appdur2*16 + appdur3*4 + appdur4*2 + appdur5)/279) + (appdur1 + ((((appdur1-appdur2) - (appdur2-appdur3))) - (((appdur2-appdur3) - (appdur3-appdur4))) + ((appdur1-appdur2) - (appdur2-appdur3)) + (appdur1-appdur2) + ((appdur2-appdur3) - (appdur3-appdur4)) + (appdur2-appdur3) + ((appdur3-appdur4) - (appdur4-appdur5)) + (appdur3-appdur4) + (appdur4-appdur5))/10)*2)/3 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -556,7 +556,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Action Duration",
       "query": "select appdur1 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -574,7 +574,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Action Duration",
       "query": "select appdur2 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -592,7 +592,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Action Duration",
       "query": "select appdur3 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -610,7 +610,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Action Duration",
       "query": "select appdur4 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -628,7 +628,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Action Duration",
       "query": "select appdur5 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -646,7 +646,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Error Forecast",
       "query": "select (((apperr1*256 + apperr2*16 + apperr3*4 + apperr4*2 + apperr5)/279) + (apperr1 + ((((apperr1-apperr2) - (apperr2-apperr3))) - (((apperr2-apperr3) - (apperr3-apperr4))) + ((apperr1-apperr2) - (apperr2-apperr3)) + (apperr1-apperr2) + ((apperr2-apperr3) - (apperr3-apperr4)) + (apperr2-apperr3) + ((apperr3-apperr4) - (apperr4-apperr5)) + (apperr3-apperr4) + (apperr4-apperr5))/10)*2)/3*tfactor/100 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -664,7 +664,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Errors",
       "query": "select apperr1 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -682,7 +682,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Errors",
       "query": "select apperr2 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -700,7 +700,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Errors",
       "query": "select apperr3 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -718,7 +718,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Errors",
       "query": "select apperr4 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
@@ -736,7 +736,7 @@
         "timeframe": null,
         "managementZone": null
       },
-      "customName": " ",
+      "customName": "Errors",
       "query": "select apperr5 as \" \" from useraction limit 1",
       "type": "SINGLE_VALUE"
     },
