--- a/AppOverview.json
+++ b/AppOverview.json
@@ -35,7 +35,7 @@
     "managementZone": null
    },
    "customName": " ",
-   "query": "select count(usersessionid) as \"Satisfied Users\" from usersession where useraction.application=\"MyApp\" MyFilter and userExperienceScore=\"SATISFIED\"",
+   "query": "select count(usersessionid) as \"Satisfied Users\" from usersession where useraction.application=\"MyApp\"  and userExperienceScore=\"SATISFIED\"",
    "type": "SINGLE_VALUE",
    "timeFrameShift": "dynamic"
   },
@@ -54,7 +54,7 @@
     "managementZone": null
    },
    "customName": " ",
-   "query": "select count(usersessionid) as \"Tolerated Users\" from usersession where useraction.application=\"MyApp\" MyFilter and userExperienceScore=\"TOLERATED\"",
+   "query": "select count(usersessionid) as \"Tolerated Users\" from usersession where useraction.application=\"MyApp\"  and userExperienceScore=\"TOLERATED\"",
    "type": "SINGLE_VALUE",
    "timeFrameShift": "dynamic"
   },
@@ -73,7 +73,7 @@
     "managementZone": null
    },
    "customName": " ",
-   "query": "select count(usersessionid) as \"Frustrated Users\" from usersession where useraction.application=\"MyApp\" MyFilter and userExperienceScore=\"FRUSTRATED\"",
+   "query": "select count(usersessionid) as \"Frustrated Users\" from usersession where useraction.application=\"MyApp\"  and userExperienceScore=\"FRUSTRATED\"",
    "type": "SINGLE_VALUE",
    "timeFrameShift": "dynamic"
   },
@@ -92,7 +92,7 @@
     "managementZone": null
    },
    "customName": "Duration",
-   "query": "select useraction.application,percentile(useraction.duration,90) as \"90 Percentile\",percentile(useraction.duration,80) as \"80 Percentile\",percentile(useraction.duration,70) as \"70 Percentile\",percentile(useraction.duration,60) as \"60 Percentile\",percentile(useraction.duration,50) as \"50 Percentile\",percentile(useraction.duration,40) as \"40 Percentile\",percentile(useraction.duration,30) as \"30 Percentile\",percentile(useraction.duration,20) as \"20 Percentile\",percentile(useraction.duration,10) as \"10 Percentile\"from usersession where useraction.application=\"MyApp\" MyFilter group by useraction.application",
+   "query": "select useraction.application,percentile(useraction.duration,90) as \"90 Percentile\",percentile(useraction.duration,80) as \"80 Percentile\",percentile(useraction.duration,70) as \"70 Percentile\",percentile(useraction.duration,60) as \"60 Percentile\",percentile(useraction.duration,50) as \"50 Percentile\",percentile(useraction.duration,40) as \"40 Percentile\",percentile(useraction.duration,30) as \"30 Percentile\",percentile(useraction.duration,20) as \"20 Percentile\",percentile(useraction.duration,10) as \"10 Percentile\"from usersession where useraction.application=\"MyApp\"  group by useraction.application",
    "type": "COLUMN_CHART"
   },
   {
@@ -110,7 +110,7 @@
     "managementZone": null
    },
    "customName": "Visually Complete",
-   "query": "select useraction.application,percentile(useraction.visuallycompletetime,90) as \"90 Percentile\",percentile(useraction.visuallycompletetime,80) as \"80 Percentile\",percentile(useraction.visuallycompletetime,70) as \"70 Percentile\",percentile(useraction.visuallycompletetime,60) as \"60 Percentile\",percentile(useraction.visuallycompletetime,50) as \"50 Percentile\",percentile(useraction.visuallycompletetime,40) as \"40 Percentile\",percentile(useraction.visuallycompletetime,30) as \"30 Percentile\",percentile(useraction.visuallycompletetime,20) as \"20 Percentile\",percentile(useraction.visuallycompletetime,10) as \"10 Percentile\"from usersession where useraction.application=\"MyApp\" MyFilter group by useraction.application",
+   "query": "select useraction.application,percentile(useraction.visuallycompletetime,90) as \"90 Percentile\",percentile(useraction.visuallycompletetime,80) as \"80 Percentile\",percentile(useraction.visuallycompletetime,70) as \"70 Percentile\",percentile(useraction.visuallycompletetime,60) as \"60 Percentile\",percentile(useraction.visuallycompletetime,50) as \"50 Percentile\",percentile(useraction.visuallycompletetime,40) as \"40 Percentile\",percentile(useraction.visuallycompletetime,30) as \"30 Percentile\",percentile(useraction.visuallycompletetime,20) as \"20 Percentile\",percentile(useraction.visuallycompletetime,10) as \"10 Percentile\"from usersession where useraction.application=\"MyApp\"  group by useraction.application",
    "type": "COLUMN_CHART"
   },
   {
@@ -128,7 +128,7 @@
     "managementZone": null
    },
    "customName": "Speed Index",
-   "query": "select useraction.application,percentile(useraction.speedindex,90) as \"90 Percentile\",percentile(useraction.speedindex,80) as \"80 Percentile\",percentile(useraction.speedindex,70) as \"70 Percentile\",percentile(useraction.speedindex,60) as \"60 Percentile\",percentile(useraction.speedindex,50) as \"50 Percentile\",percentile(useraction.speedindex,40) as \"40 Percentile\",percentile(useraction.speedindex,30) as \"30 Percentile\",percentile(useraction.speedindex,20) as \"20 Percentile\",percentile(useraction.speedindex,10) as \"10 Percentile\"from usersession where useraction.application=\"MyApp\" MyFilter group by useraction.application",
+   "query": "select useraction.application,percentile(useraction.speedindex,90) as \"90 Percentile\",percentile(useraction.speedindex,80) as \"80 Percentile\",percentile(useraction.speedindex,70) as \"70 Percentile\",percentile(useraction.speedindex,60) as \"60 Percentile\",percentile(useraction.speedindex,50) as \"50 Percentile\",percentile(useraction.speedindex,40) as \"40 Percentile\",percentile(useraction.speedindex,30) as \"30 Percentile\",percentile(useraction.speedindex,20) as \"20 Percentile\",percentile(useraction.speedindex,10) as \"10 Percentile\"from usersession where useraction.application=\"MyApp\"  group by useraction.application",
    "type": "COLUMN_CHART"
   },
   {
