--- a/AppOverview.json
+++ b/AppOverview.json
@@ -670,7 +670,7 @@
     "timeframe": null,
     "managementZone": null
    },
-   "markdown": "## [\u21e6](#dashboard;id=fbe8d3b1-ccb9-480c-9e5d-0e1b8b4da313)"
+      "markdown": "![BackButton]()"
   }
  ]
 }
