--- a/AppOverview.json
+++ b/AppOverview.json
@@ -7,7 +7,7 @@
  },
  "id": "fbe8d3b1-ccb9-480c-9e5d-0e1b8b3da313",
  "dashboardMetadata": {
-  "name": "\ud83c\udfac MyApp Overview",
+  "name": "\ud83c\udfac MyApp Portal",
   "shared": true,
   "owner": "MyEmail",
   "sharingDetails": {
